# vtree

./: README.md  pyproject.toml
src/vtree/: __init__.py  __main__.py  compress_subdirs.py  estimate_compression.py  mirror.py
